infra/k8s/tasks-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasks
  template:
    metadata:
      labels:
        app: tasks
    spec:
      containers:
      - name: tasks
        image: julianfigueroa/tasks
---
apiVersion: v1
kind: Service
metadata:
  name: tasks-srv
spec:
  selector:
    app: tasks
  ports:
  - name: tasks
    protocol: TCP
    port: 4001
    targetPort: 4001
