infra/k8s/users-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-srv
spec:
  type: NodePort
  selector:
    app: users
  ports:
  - name: users
    protocol: TCP
    port: 4000
    targetPort: 4000
