infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: users.com
    http:
      paths:
      - path: /users
        backend:
          serviceName: users-clusterip-srv
          servicePort: 4000
      - path: /users/?(.*)/tasks
        backend:
          serviceName: tasks-srv
          servicePort: 4001
      - path: /?(.*)
        backend:
          serviceName: client-srv
          servicePort: 3000
